<resources>
    <string name="app_name">MEINE LKW-Bewegung</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="savepassword">Stay locked in</string>
    <string name="login">Login</string>
    <string name="notaccount">Do not have account?</string>
    <string name="register">Register</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="truckDetail">TRUCK DETAIL</string>
    <string name="loading_information">LOADING\nINFORMATION</string>
    <string name="loading_informationtitle">LOADING INFORMATION</string>
    <string name="privacy">AGB‘s</string>
    <string name="contact">Contact</string>
    <string name="truck_number">Truck Number</string>
    <string name="phn_number">Phone Number</string>
    <string name="customerEmail">Customer Email</string>
    <string name="startofShift">Start of shift</string>
    <string name="endOfshift">End of shift</string>
    <string name="breakk">Break</string>
    <string name="endofBreak">End of break</string>
    <string name="navigation">Navigation</string>
    <string name="send">Send</string>
    <string name="cancellation">cancellation</string>
    <string name="startofLoading">Start of loading</string>
    <string name="endofLoading">End of loading</string>
    <string name="completeCargo">Complete cargo</string>
    <string name="my">MY</string>
    <string name="truckMoment">Truck Movement</string>
    <string name="invalidCredential">Invalid Credential </string>
    <string name="registerationDone">Thanks For Registration</string>
    <string name="emptyfilled">Please Fill All Fields</string>
    <string name="passwordMismatch">Password Mismatch</string>
    <string name="datasentsuccessfully">Data Sent Successfully.</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="order_number">Order Number</string>
    <string name="numberOfUser">Number Of User</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="this_will_cost_you_100_euro">This will cost you:</string>
    <string name="yes">YES</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="numberofUserNotselect">Number of User Not Select</string>
    <string name="arrival">Arrival</string>
    <string name="departure">Departure</string>
    <string name="wrong_email">Invalid Email</string>
    <string name="data_loading">Please wait...Data is loading</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="mailSent">Mail Sent Successfully</string>

    <string name="enter_awb_uld">Enter AWB/ULD</string>
    <string name="damage">Damage</string>
    <string name="not_found">Not Found</string>
    <string name="no_space">No Space</string>
    <string name="damage_report">Damage Report</string>
    <string name="pod">POD</string>
    <string name="how_many_pieces_are_damage">How many pieces are Damage ?</string>
    <string name="damage_piece">Damage Piece</string>
    <string name="how_many_pieces_are_not_found">How many pieces are Not Found ?</string>
    <string name="not_found_piece">Not Found Piece</string>
    <string name="upload_image">Upload Image</string>
    <string name="scanner">Scanner</string>
    <string name="invalid_dispo_email">Invalid Dispo-Email</string>
    <string name="invalid_customerEmail">Invalid Cutomer Email</string>

    <string name="fill_all_field">Please fill all the field.</string>
    <string name="fill_atlest_one_field">Please fill atleast one field</string>
    <string name="fill_atlest_awd">Please fill AWB/ULD number</string>
    <string name="write_message_here">Write Message Here..</string>
    <string name="company">Company</string>
    <string name="mobile">Mobile</string>

    <string name="changeLangugeEnglishtoGerman">Choose language</string>
    <string name="changeLangugeGermantoEnglish">Choose language</string>
    <string name="termsconditiontext">I hereby agree to the terms and conditions and data protection regulations, in particular the processing of my personal data in connection with the use.</string>
    <string name="tc_notselect">Please select General Terms and Conditions</string>

    <string name="loading_place">Loading Place</string>
    <string name="loading_station">Loading Station</string>
</resources>
