<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/_12sdp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"

        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/_14sdp"></TextView>

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appname"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/this_will_cost_you_100_euro"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"></TextView>


    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@+id/popup_title"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/yes"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />
</RelativeLayout>