<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"

    tools:context=".ui.LogIn.LoginActivity">

    <RelativeLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/truck_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/truck_icon" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/truck_img"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:text="@string/truckMoment"
            android:textAlignment="center"
            android:textColor="#f44236"
            android:textSize="@dimen/_10sdp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/text"
        android:id="@+id/login_detail_layout"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/square_drawble_et"
                 android:hint="@string/username"
                android:padding="@dimen/_8sdp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/square_drawble_et"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:singleLine="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:buttonTint="@color/colorPrimary"
            android:padding="@dimen/_5sdp"
            android:text="@string/savepassword" />

    </LinearLayout>
<RelativeLayout
    android:id="@+id/loginBtn"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_below="@+id/login_detail_layout"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:gravity="center"
    android:background="@drawable/round_corner_btn"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/login"
        android:layout_alignParentLeft="true"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"></TextView>
    <ImageView
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/go_next_icon"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notaccount"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:textColor="#f44236"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


</RelativeLayout>