<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.awb.AWBActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:padding="@dimen/_12sdp"
            android:rotation="180"
            android:src="@drawable/go_next_icon" />

        <TextView
            android:id="@+id/tittle_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="AWB/ULD"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:hintTextAppearance="@style/changeInputtextColor">

                <EditText
                    android:id="@+id/awb_uld_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/enter_awb_uld"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
<androidx.core.widget.NestedScrollView
    android:layout_below="@+id/layout1"
    android:layout_above="@+id/sendBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <CheckBox
                android:id="@+id/damageCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/damage"></CheckBox>


        </RelativeLayout>


        <CheckBox
            android:id="@+id/notfoundCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"></CheckBox>

        <CheckBox
            android:id="@+id/nospaceCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_space"></CheckBox>

        <CheckBox
            android:id="@+id/damagereportCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage_report"></CheckBox>

        <CheckBox
            android:id="@+id/podCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pod"></CheckBox>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/how_many_pieces_are_damage"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/square_drawble_et"
            android:gravity="center">

            <EditText
                android:id="@+id/damagePiece_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:inputType="number"
                android:maxLength="5"
                android:singleLine="true"
                android:hint="@string/damage_piece"
                android:textAlignment="center"
                android:textSize="@dimen/_10sdp">

            </EditText>
        </RelativeLayout>

        <TextView
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/how_many_pieces_are_not_found"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <RelativeLayout
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/square_drawble_et"
            android:gravity="center">

            <EditText
                android:id="@+id/notfoundPiece_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@null"
                android:inputType="number"
                android:singleLine="true"
                android:maxLength="5"
                android:hint="@string/not_found_piece"
                android:textAlignment="center"
                android:textSize="@dimen/_10sdp">

            </EditText>
        </RelativeLayout>

        <LinearLayout
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/selectImages"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/gallery_icon"
                    android:tint="@color/colorPrimary">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/upload_image">
                </TextView>
            </LinearLayout>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/scannerBtn"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_weight="1"
                    android:src="@drawable/baarcode"
                    android:tint="@color/colorPrimary"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/scanner">

                </TextView>

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="visible"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:id="@+id/attachment_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/square_drawable">

            <CheckBox
                android:id="@+id/termsConditionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_4sdp"
                android:text="@string/termsconditiontext"
                android:layout_marginStart="@dimen/_10sdp"
                android:buttonTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/openTermsCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toRightOf="@+id/termsConditionBtn"
                android:text="@string/termsconditiontext"
                android:textColor="@color/colorPrimary"></TextView>
        </RelativeLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>


            <RelativeLayout
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_detail_layout"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/round_corner_btn"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"></TextView>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@drawable/go_next_icon" />
            </RelativeLayout>


        </RelativeLayout>

</LinearLayout>