<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg1"
    android:layout_height="match_parent"
    tools:context="ui.register.RegisterActivity">
    <RelativeLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/truck_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/truck_icon" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/truck_img"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:text="@string/truckMoment"
            android:textAlignment="center"
            android:textColor="#f44236"
            android:textSize="@dimen/_10sdp" />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/text"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_above="@+id/doneBtn"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/login_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone"
            android:background="@drawable/square_drawble_et"
            android:hint="@string/username"
            android:padding="@dimen/_8sdp"
            android:singleLine="true" />
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/square_drawble_et"
                android:hint="@string/password"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:inputType="textPassword"
                android:singleLine="true" />
            <EditText
                android:id="@+id/et_confirmpassword"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/square_drawble_et"
                android:singleLine="true" />
        <EditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/square_drawble_et"
            android:hint="@string/email"
            android:padding="@dimen/_8sdp"
            android:singleLine="true" />
        <EditText
            android:id="@+id/et_company_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/square_drawble_et"
            android:hint="@string/company_name"
            android:padding="@dimen/_8sdp"
            android:singleLine="true" />
        <EditText
            android:id="@+id/et_phnnumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/phn_number"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:maxLength="15"
            android:background="@drawable/square_drawble_et"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/square_drawable">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/usersCount_sp"
                android:layout_width="match_parent"

                android:layout_height="@dimen/_40sdp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_above="@+id/sendBtn"
            android:layout_width="match_parent"
            android:background="@drawable/square_drawable"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/termsConditionBtn"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="@dimen/_20sdp">
            </CheckBox>
            <TextView
                android:id="@+id/openTermsCondition"
                android:layout_toRightOf="@+id/termsConditionBtn"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_height="wrap_content"
                android:text="@string/termsconditiontext">
            </TextView>
        </RelativeLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:background="@drawable/round_corner_btn"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/register"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold">

        </TextView>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/go_next_icon"/>
    </RelativeLayout>


</RelativeLayout>